<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="begin_date">Begin Date</string>
    <string name="Sort">Sort</string>
    <string name="New_Desk_Values">News Desk Values</string>
    <string name="check_Box">Arts</string>
    <string name="fashion_n_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="btn_save">SAVE</string>
    <string name="settings">Settings</string>
</resources>
